--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none"
-    android:background="@drawable/login_bg"
+    android:background="@drawable/loginbg"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -85,8 +85,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/comfortaabold"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
                 android:singleLine="true"
+
                 android:textColor="@color/black" />
 
         </com.google.android.material.textfield.TextInputLayout>
