--- a/app/src/main/res/layout/activity_consultnow.xml
+++ b/app/src/main/res/layout/activity_consultnow.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".consultnow">
 
+    <ViewFlipper
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/flipper"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
