--- a/app/src/main/res/layout/activity_general.xml
+++ b/app/src/main/res/layout/activity_general.xml
@@ -18,9 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="WELCOME TO MEDIC"
+            android:text="Consult Specialists Online Now"
             android:textColor="#fff"
-            android:textSize="30dp"
+            android:textSize="27dp"
             android:textStyle="bold" />
 
 
@@ -62,7 +62,8 @@
                         android:layout_width="140dp"
                         android:layout_height="100dp"
                         android:layout_marginBottom="10dp"
-                        android:src="@drawable/doctor" />
+                        android:src="@drawable/doctor"
+                        android:id="@+id/imageView2"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -101,6 +102,7 @@
                         android:layout_width="130dp"
                         android:layout_height="100dp"
                         android:src="@drawable/coronaa"
+                        android:id="@+id/imageView"
 
                         />
 
@@ -140,7 +142,8 @@
                     <ImageView
                         android:layout_width="130dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/gyno" />
+                        android:src="@drawable/gyno"
+                        android:id="@+id/imageView3"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -178,7 +181,8 @@
                     <ImageView
                         android:layout_width="130dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/coronaa" />
+                        android:src="@drawable/coronaa"
+                        android:id="@+id/imageView4"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -216,7 +220,8 @@
                     <ImageView
                         android:layout_width="130dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/urology" />
+                        android:src="@drawable/urology"
+                        android:id="@+id/imageView5"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -254,7 +259,8 @@
                     <ImageView
                         android:layout_width="140dp"
                         android:layout_height="100dp"
-                        android:background="@drawable/doctor" />
+                        android:background="@drawable/doctor"
+                        android:id="@+id/imageView6"/>
 
                     <TextView
                         android:layout_width="wrap_content"
