--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="card_1">#32DDCD</color>
     <color name="red" />
+    <color name="green">#EE36EF29</color>
+
+
 </resources>
