--- a/app/src/main/res/layout/activity_appoinment.xml
+++ b/app/src/main/res/layout/activity_appoinment.xml
@@ -4,139 +4,158 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
     tools:context=".Appoinment">
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-4dp">
+
         <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="93dp"
-            android:layout_height="84dp"
-            android:layout_marginTop="64dp"
-            android:background="@drawable/entimg"
-            app:layout_constraintEnd_toStartOf="@+id/textView5"
-            app:layout_constraintHorizontal_bias="0.333"
+            android:id="@+id/image_user"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/ex1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dr.SAthyamoorthy MBBS"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.653" />
+        <TextView
+            android:id="@+id/text_user_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:text="S.Ravichandar"
+            android:textColor="#E91E63"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toEndOf="@+id/image_user"
+            app:layout_constraintTop_toTopOf="@+id/image_user" />
+
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/text_date2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Consult physician and covid consultant"
+            android:textColor="#757F8C"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/text_user_name"
+            app:layout_constraintTop_toBottomOf="@+id/text_user_name" />
+
+        <TextView
+            android:id="@+id/exp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text=" MBBS,MD-Genaral Medicine"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/text_date2"
+            app:layout_constraintTop_toBottomOf="@+id/text_date2" />
+
+
+        <TextView
+            android:id="@+id/exp2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="5 Years of experience"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/exp"
+            app:layout_constraintTop_toBottomOf="@+id/exp" />
+
+
+        <Button
+            android:id="@+id/consult"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Consult now"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintStart_toStartOf="@+id/exp2"
+            app:layout_constraintTop_toBottomOf="@+id/exp2" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="consult physician covid consultant"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.649"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="1.0" />
 
-        <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="6 years of experience"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.462"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="#CBB8F6"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="175dp" />
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="217dp"
-        android:layout_height="44dp"
 
-        android:text="consult online   400 "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.659"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.216" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+   <RelativeLayout
+        android:id="@+id/constraintLayout1"
         android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="101dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/doctor"
-        app:layout_constraintEnd_toStartOf="@+id/textView8"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ashok kumar MBBS"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="152dp"
-        tools:layout_editor_absoluteY="273dp" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Covid consult physician chennai "
-        tools:layout_editor_absoluteX="152dp"
-        tools:layout_editor_absoluteY="305dp"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="10 years of experiance"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="333dp"
-        tools:ignore="MissingConstraints" />
-
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="228dp"
-        android:layout_height="46dp"
-        android:text="Consult online 300"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.748"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.551"
-        tools:ignore="MissingConstraints" />
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/white"
+        android:padding="15dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="456dp" />
+        tools:layout_editor_absoluteY="229dp">
+
+       <ImageView
+           android:id="@+id/image_user1"
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:background="@drawable/ex1"
+           android:padding="20dp"
+           app:layout_constraintStart_toStartOf="@+id/consult"
+           app:layout_constraintTop_toTopOf="parent"
+           tools:ignore="NotSibling" />
+
+       <TextView
+           android:id="@+id/text_user_name1"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="120dp"
+           android:text="T.Keerthana"
+           android:textColor="#E91E63"
+           android:textSize="16sp"
+           android:textStyle="bold"
+           app:layout_constraintEnd_toStartOf="@+id/image_user1"
+           app:layout_constraintStart_toEndOf="@+id/image_user1"
+           app:layout_constraintTop_toTopOf="@+id/image_user1" />
+
+
+       <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="397dp" />
+
+       <TextView
+           android:id="@+id/exp21"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="188dp"
+           android:text="5 Years of experience" />
+   </RelativeLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
