--- a/app/src/main/res/layout/activity_consultnow.xml
+++ b/app/src/main/res/layout/activity_consultnow.xml
@@ -59,6 +59,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Consult Now"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:width="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
