--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,18 +56,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.118" />
 
+
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="197dp"
         android:layout_height="35dp"
+        android:layout_marginStart="224dp"
         app:layout_constraintBottom_toBottomOf="@+id/mytoolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.897"
         app:layout_constraintStart_toStartOf="@+id/mytoolbar"
         app:layout_constraintTop_toTopOf="@+id/mytoolbar"
-        app:layout_constraintVertical_bias="0.592" />
-
-
+        app:layout_constraintVertical_bias="0.761" />
 
     <ViewFlipper
         android:layout_width="match_parent"
@@ -140,6 +138,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/flippernew"
         app:layout_constraintVertical_bias="0.743" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.993"
+        app:layout_constraintStart_toEndOf="@+id/spinner"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/profile_photo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
