--- a/app/src/main/res/layout/activity_profilepage.xml
+++ b/app/src/main/res/layout/activity_profilepage.xml
@@ -34,13 +34,17 @@
 
                 <ImageView
                     android:id="@+id/imageView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="137dp"
+                    android:layout_height="141dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                     app:layout_constraintEnd_toEndOf="@+id/imageView10"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView10"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/img1" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -121,7 +125,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="24dp"
-                            android:text="Account Setting"
+                            android:text="My Reviwes"
                             android:textColor="#000000"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -157,7 +161,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="24dp"
-                            android:text="Account Setting"
+                            android:text="Personal Information"
                             android:textColor="#000000"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -193,7 +197,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="24dp"
-                            android:text="Account Setting"
+                            android:text="Notification"
                             android:textColor="#000000"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -229,7 +233,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="24dp"
-                            android:text="Account Setting"
+                            android:text="Fingerprint Settings"
                             android:textColor="#000000"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -252,6 +256,16 @@
                             app:srcCompat="@drawable/img1"
                             tools:ignore="DuplicateIds" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <Button
+                        android:id="@+id/button6"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="#ffffff"
+                        android:textSize="18sp"
+                        android:text="Back to Main Menu" />
 
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
